# Audio2Face-3D-Training-Framework

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  utils.py
audio2face/: convert_onnx.py  dataset.py  deploy.py  emotion.py  infer_diffusion.py  layers.py  losses.py  phoneme.py  train_diffusion.py  train_regression.py  utils.py
audio2face/audio/: __init__.py  audio_track.py  utils.py
audio2face/config_base/: config_dataset_base.py  config_inference_diffusion_base.py  config_inference_regression_base.py  config_preproc_base.py  config_train_diffusion_base.py  config_train_regression_base.py  exposed.py
audio2face/geometry/: anim_cache.py  maya_cache.py  pca.py  point_cache.py  xform.py
audio2face/networks/: base.py  conv_w2v_autocorr.py  diffusion_rnn.py
audio2face/preproc/: preproc.py  preproc_deploy.py  preproc_skin.py  preproc_tongue.py
configs/example-diffusion/: config_dataset.py  config_inference.py  config_preproc.py  config_train.py
configs/example-diffusion-min/: config_dataset.py  config_train.py
configs/example-regression-min/: config_dataset.py  config_inference.py  (+2 more)
docker/: Dockerfile  build_docker.sh  pyproject.toml  run_deploy.sh  run_inference.sh  run_preproc.sh  run_shell.sh  run_train.sh  utils.sh
docs/: a2f_introduction.md  config_details.md  preparing_animation_data.md  training_framework.md  using_maya_ace.md
runners/: run_deploy.py  run_deploy_debug.py  run_inference.py  run_inference_debug.py  run_preproc.py  run_preproc_debug.py  run_train.py  run_train_debug.py
tools/: format_code.py  requirements.txt
(+3 files in other folders)
